my-apps/media/freshrss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  namespace: freshrss
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: freshrss
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: freshrss
        image: lscr.io/linuxserver/freshrss:latest
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        resources:
          requests:
            memory: 128Mi
            cpu: 50m
          limits:
            memory: 512Mi
            cpu: 1000m
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: freshrss-config
