my-apps/media/freshrss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: freshrss
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: freshrss
