my-apps/media/freshrss/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: freshrss
  namespace: freshrss
spec:
  hostnames:
  - rss.serverops.live
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-internal
    namespace: gateway
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: freshrss
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
